# youtube-automation

./: .env.example  .gitignore  AGENTS.md  Dockerfile  KICKOFF.md  README.md
apps/api/: pyproject.toml  railway.json  railway.toml  requirements.txt
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/core/: config.py  db.py  llm.py  logging.py  paths.py  prompts.py
apps/api/app/modules/: pipeline.py
apps/api/app/modules/narration/: narrator.py
apps/api/app/modules/performance/: tracker.py
apps/api/app/modules/research/: service.py
apps/api/app/modules/review/: reviewer.py
apps/api/app/modules/richgo/: editorial.py
apps/api/app/modules/scenario/: generator.py  workspace.py
apps/api/app/modules/subtitle/: subtitler.py
apps/api/app/modules/sync/: obsidian.py
apps/api/app/modules/thumbnail/: generator.py  video_frame.py
apps/api/app/modules/topic/: selector.py
apps/api/app/modules/trend/: benchmark.py  naver_trend.py  scanner.py  youtube_fallback.py
apps/api/app/modules/upload/: meta.py  (+2 more)
apps/api/app/routes/: health.py  narrations.py  performance.py  pipeline.py  research.py  reviews.py  scenarios.py  strategy.py  subtitles.py  thumbnails.py  topics.py  trends.py  uploads.py
apps/api/tests/: test_benchmark_youtube_fallback.py  test_db_engine_config.py  test_research_trend_selection.py  test_review_narration_fallback.py  test_scanner_youtube_fallback.py  test_scenario_fallback.py  test_supermarketing_quality_gate.py  test_topic_fallback.py  test_topic_selector_hypothesis_loop.py  test_trends_economy_filter.py  test_youtube_fallback.py
(+99 files in other folders)
